<package format="3">
  <name>humanoid_nav_msgs</name>
  <version>0.3.0</version>
  <description>
    Messages and services for humanoid robot navigation
  </description>
  <maintainer email="HornungA@informatik.uni-freiburg.de">Armin Hornung</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/humanoid_nav_msgs</url>
  <url type="bugtracker">https://github.com/ahornung/humanoid_msgs/issues</url>
  <url type="repository">https://github.com/ahornung/humanoid_msgs</url>
  <author>Armin Hornung</author>
  
  <member_of_group>rosidl_interface_packages</member_of_group>

  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
</package>
